--- a/BTH745_Website/assets/css/continents.css
+++ b/BTH745_Website/assets/css/continents.css
@@ -33,3 +33,8 @@
     background-size: 100%;	
     background-repeat: repeat;
 }
+
+img{
+    width: 700px !important;
+    height: 700px !important;
+}
