--- a/BTH745_Website/assets/css/flight.css
+++ b/BTH745_Website/assets/css/flight.css
@@ -31,3 +31,9 @@
 ::-ms-input-placeholder { /* Microsoft Edge */
  color: red;
 }
+
+
+img {
+    width: 300px !important;
+    height: 120px !important;
+}
